test/snapshots/slite__app_tui__app_tui_test__scroll_down.snap
---
source: src/bin/slite/./app_tui_test.rs
expression: view
---
                                                                                
 ╭────────────────────────────────────────────────────────────────────────────╮ 
 │ Source │ Target │ Diff │ Migrate                                           │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
 ╭Objects─────────────────────╮╭SQL───────────────────────────────────────────╮ 
 │Tables                      ││CREATE TABLE album_artist (                   │ 
 │  album                     ││ album_artist_id INTEGER PRIMARY KEY NOT NULL,│ 
 │  album_artist              ││ album_artist_name TEXT NOT NULL COLLATE      │ 
 │  artist                    ││NOCASE,                                       │ 
 │  search_index              ││ created_date INTEGER NOT NULL,               │ 
 │  search_spellfix           ││ UNIQUE (album_artist_name COLLATE NOCASE)    │ 
 │  search_vocab              ││)                                             │ 
 │  song                      ││                                              │ 
 │Indexes                     ││                                              │ 
 │  idx_song_path             ││                                              │ 
 │Views                       ││                                              │ 
 │  vw_all                    ││                                              │ 
 │Triggers                    ││                                              │ 
 │  after_album_artist_delete ││                                              │ 
 │  after_album_artist_insert ││                                              │ 
 │  after_album_artist_update ││                                              │ 
 │  after_album_delete        ││                                              │ 
 │  after_album_insert        ││                                              │ 
 │  after_album_update        ││                                              │ 
 │  after_artist_delete       ││                                              │ 
 │  after_artist_insert       ││                                              │ 
 │  after_artist_update       ││                                              │ 
 │  after_song_delete         ││                                              │ 
 ╰────────────────────────────╯╰──────────────────────────────────────────────╯ 
                                                                                

