test/snapshots/slite__app_tui__app_tui_test__view_target.snap
---
source: src/bin/slite/./app_tui_test.rs
expression: view
---
                                                                                
 ╭────────────────────────────────────────────────────────────────────────────╮ 
 │ Source │ Target │ Diff │ Migrate                                           │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
 ╭Objects────╮                                                                  
 │Tables     │                                                                  
 │Indexes    │                                                                  
 │Views      │                                                                  
 │Triggers   │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 │           │                                                                  
 ╰───────────╯                                                                  
                                                                                

